# src/main/java/com/example/enterprisefinalexam/model/Staff.java
@@ -7,26 +7,31 @@ import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.ManyToOne;
 
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import lombok.ToString;
 
 import static javax.persistence.GenerationType.IDENTITY;
 
-@AllArgsConstructor
-@NoArgsConstructor
+@Entity
 @Getter
 @Setter
-@Entity
+@ToString
 @Builder
-public class Staff implements Serializable{
+@AllArgsConstructor
+@NoArgsConstructor
+public class Staff implements Serializable {
     @Id
     @GeneratedValue(strategy = IDENTITY)
     @Column(name = "id", nullable = false)
     private Long id;
+    @Column(name = "first_name")
     private String firstName;
     private String lastName;
     private LocalDate birthDate;
@@ -37,4 +42,7 @@ public class Staff implements Serializable{
     private String phoneNumber;
     @Column(nullable = false)
     private Double salary;
+    @ManyToOne
+    @JoinColumn(name = "position_id")
+    private Position position;
 }
